--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -26,11 +26,12 @@
             android:id="@+id/tv_list_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/notosansregular"
+            android:fontFamily="@font/notosansextrabold"
             android:text="@string/list_of_users"
+            android:layout_marginTop="16dp"
             android:textAlignment="center"
             android:textColor="@color/primaryText"
-            android:textSize="16sp" />
+            android:textSize="24sp" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_user_list"
