--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -46,17 +46,17 @@
                     android:orientation="vertical">
 
                     <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/til_email"
+                        android:id="@+id/til_username"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:boxBackgroundMode="none"
-                        android:hint="@string/email">
+                        android:hint="@string/username">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/et_login_email"
+                            android:id="@+id/et_login_username"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:inputType="textEmailAddress"/>
+                            android:inputType="text"/>
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -71,6 +71,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="16dp"
+                    android:layout_marginTop="16dp"
                     android:orientation="vertical">
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -105,6 +106,7 @@
                 android:textAlignment="textEnd"
                 android:textColor="@color/primaryText"
                 android:textSize="12sp"
+                android:layout_marginTop="16dp"
                 android:fontFamily="@font/notosansbold"
                 />
 
